added more buttons

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 	<button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/ajhackett'"><span class="showBefore">ajhackett</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
 	<br>
 	<button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/battleships'"><span class="showBefore">battleships</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
-	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/MemoryGame'"><span class="showBefore">memorygame</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
-	<br><button class="noDetailHover no"><span class="showBefore">mr-veric</span><span class="showAfter">locked <i class="fa fa-ban"></i></span></button>
-	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/pi-status'"><span class="showBefore">pi-status</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
+	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/MemoryGame'"><span class="showBefore">memory game</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
+	<br><button class="noDetailHover no"><span class="showBefore">mrveric</span><span class="showAfter">locked <i class="fa fa-ban"></i></span></button>
+	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/pi-status'"><span class="showBefore">pi status</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
 	<br><button class="noDetailHover no"><span class="showBefore">startpage</span><span class="showAfter">wait <i class="fa fa-hourglass-half"></i></span></button>
-	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/statsProj'"><span class="showBefore">statsproj</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
-	<br>
+	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/statsProj'"><span class="showBefore">stats project</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
+	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/timer'"><span class="showBefore">timer</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
+	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/image-recog'"><span class="showBefore">image recognition</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
+	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/english'"><span class="showBefore">english flashcards</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
 </body></html>
