Added new buttons

--- a/index.html
+++ b/index.html
@@ -23,4 +23,5 @@
 	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/timer'"><span class="showBefore">timer</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
 	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/image-recog'"><span class="showBefore">image recognition</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
 	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/english'"><span class="showBefore">english flashcards</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
+	<br><button class="detailHover" onclick="window.location.href='http://mrconorae.github.io/progress'"><span class="showBefore">progress bar</span><span class="showAfter">view <i class="fa fa-arrow-right"></i></span></button>
 </body></html>
